feat: Add Google site verification tag
Includes the Google site verification meta tag in the HTML to enable website ownership verification for Google Search Console.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Media Chretien APP</title>
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#111827" />
+    <meta name="google-site-verification" content="LywcL26iIe2MtOv7rnXilLy4p61khdDPk4OWC9C_SDY" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
